# FlaskMVC

./: README.md
FlaskProjeto/: Dockerfile  README.md  app.py  controller.py  filmes.db  model.py  pyproject.toml  requirements.txt  set_env.env
FlaskProjeto/View/: alerts.py  view.py  view_delete.py  view_insert.py  view_update.py
